--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         DEV_PROJECT = "XiaLi1949-books-dev"
         STAGE_PROJECT = "XiaLi1949-books-stage"
         APP_GIT_URL = "https://github.com/XiaLi1949/DO288-apps"
-        NEXUS_SERVER = "http://nexus-common.apps.ocp-na2.prod.nextcle.com"
+        NEXUS_SERVER = "http://nexus-common.apps.ocp-na2.prod.nextcle.com/repository/nodejs"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
         APP_NAME = "books"
