--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -11,8 +11,8 @@ pipeline {
 
     environment {
         //TODO: Edit these vars as per your env
-        DEV_PROJECT = "XiaLi1949-books-dev"
-        STAGE_PROJECT = "XiaLi1949-books-stage"
+        DEV_PROJECT = "xialxl-cn-ibm-com-books-dev"
+        STAGE_PROJECT = "xialxl-cn-ibm-com-books-stage"
         APP_GIT_URL = "https://github.com/XiaLi1949/DO288-apps"
         NEXUS_SERVER = "http://nexus-common.apps.ocp-na2.prod.nextcle.com/repository/nodejs"
 
