--- a/movies/Jenkinsfile
+++ b/movies/Jenkinsfile
@@ -91,7 +91,8 @@ pipeline {
 
         stage('Wait for deployment in DEV env') {
             //TODO: Watch deployment until pod is in 'Running' state
- 	    script {
+	steps { 	
+    script {
                   openshift.withCluster() {
 		  	openshift.withProject( "${DEV_PROJECT}" ) {
 				 openshift.selector("dc", "${APP_NAME}").related('pods').untilEach(1) {
@@ -99,7 +100,8 @@ pipeline {
 		}
 		  	}
 		  }
-		}
+}	
+	}
         }
 
         stage('Promote to Staging Env') {
